--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <h2>Sign Up</h2>
-<form class="login-form container">
+<form class="signup-form container">
     <div class="row justify-content-center">
         <div class="form-floating m-1 col-6">
             <input class="form-control" name="FullName" type="text" id="fullName" placeholder="Full Name">
