--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,23 @@
-{{!-- placeholder --}}
-<h1 class="bg-dark text-white p-3">Hello</h1>
-{{#if loggedIn}}
-<p>Logged In</p>
-{{else}}
-<p>Not Signed In</p>
-{{/if}}
+<h2 class="mb-3">Posts</h2>
+<div class="container">
+    <div class="list-group list-group-numbered border border-dark">
+        {{#each posts}}
+        <a class="list-group-item d-flex justify-content-between align-items-start" href="/post/{{id}}">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">{{title}}</div>
+                <span>Written By: {{user.username}}</span>
+            </div>
+            <div class="d-flex flex-column align-items-end">
+                <div>
+                    <span class="fw-bold">Comments:</span>
+                    &nbsp;
+                    <span class="badge bg-secondary rounded-pill">{{postComments.length}}</span>
+                </div>
+                <div>
+                    {{format_date createdAt}} - {{format_time createdAt}}
+                </div>
+            </div>
+        </a>
+        {{/each}}
+    </div>
+</div>
