--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,12 +2,12 @@
 <div class="container">
     <div class="list-group list-group-numbered border border-dark">
         {{#each posts}}
-        <a class="list-group-item d-flex justify-content-between align-items-start" href="/post/{{id}}">
-            <div class="ms-2 me-auto">
+        <a class="list-group-item d-flex flex-column flex-sm-row justify-content-between align-items-start" href="/post/{{id}}">
+            <div class="ms-sm-2 me-sm-auto">
                 <div class="fw-bold">{{title}}</div>
                 <span>Written By: {{user.username}}</span>
             </div>
-            <div class="d-flex flex-column align-items-end">
+            <div class="d-flex flex-column align-items-start align-items-sm-end">
                 <div>
                     <span class="fw-bold">Comments:</span>
                     &nbsp;
