Tweaked styles and layout

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,16 @@
 <h2>Login</h2>
 <form class="login-form container">
     <div class="row justify-content-center">
-        <div class="form-floating m-1 col-6">
+        <div class="form-floating m-1 col-sm-8 col-lg-6">
             <input class="form-control" name="Email:" type="text" id="loginEmail" placeholder="Email:">
             <label class="from-label ms-3" for="loginEmail">Email:</label>
         </div>
-        <div class="form-floating m-1 col-6">
+        <div class="form-floating m-1 col-sm-8 col-lg-6">
             <input class="form-control" name="Password" type="password" id="loginPassword" placeholder="Password:">
             <label class="form-label ms-3" for="loginPassword">Password:</label>
         </div>
         <div class="form-floating m-1 col-12 text-center">
-            <button class="btn btn-secondary bg-dark-grey col-2" type="submit">Login</button>
+            <button class="btn btn-secondary bg-dark-grey px-5" type="submit">Login</button>
         </div>
     </div>
 </form>
