--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,9 +9,8 @@
             </div>
             <div class="d-flex flex-column align-items-start align-items-sm-end">
                 <div>
-                    <span class="fw-bold">Comments:</span>
-                    &nbsp;
-                    <span class="badge bg-secondary rounded-pill">{{postComments.length}}</span>
+                    <span class="fw-bold">Comments</span>                 
+                    <span class="badge text-white bg-green rounded-pill">{{postComments.length}}</span>
                 </div>
                 <div>
                     <small class="text-muted">{{format_date createdAt}}</small>
