--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,20 +28,23 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mb-2 mb-lg-0 w-100">
-                        <li class="nav-item">
-                            <a class="nav-link active fs-4" href="/">Home</a>
+                    <ul class="navbar-nav mb-2 mb-lg-0 w-100 align-items-sm-end">
+                        <li class="nav-item mx-1 my-2">
+                            <a class="nav-link active btn px-4" href="/">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active fs-4" href="/dashboard">Dashboard</a>
+                        <li class="nav-item mx-1 my-2">
+                            <a class="nav-link active btn px-4" href="/dashboard">Dashboard</a>
                         </li>
                         {{#if loggedIn}}
-                        <li class="nav-item ms-auto">
-                            <a id="logout" class="nav-link active fs-4" href="#">Logout</a>
+                        <li class="ms-auto me-sm-2 order-1">
+                            <small>Logged In as:<br>{{userName}}</small> 
+                        </li>
+                        <li class="nav-item order-sm-2 mx-1 my-2">  
+                            <a id="logout" class="nav-link active btn px-4" href="#">Logout</a>
                         </li>
                         {{else}}
-                        <li class="nav-item ms-auto">
-                            <a class="nav-link active fs-4" href="/login">Login</a>
+                        <li class="ms-sm-auto mx-1 my-2">
+                            <a class="nav-link active btn px-4" href="/login">Login</a>
                         </li>
                         {{/if}}
                     </ul>
