--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -24,7 +24,7 @@
     </div>
     <div class="col-10">
         {{#if loggedIn}}
-        <form class="row mb-3">
+        <form class="row mb-3 flex-column flex-sm-row">
             <div class="col-10 form-floating">
                 <input type="text" name="New Comment" id="new-comment" class="form-control" placeholder="Add New Comment.....">
                 <label class="form-label ms-3" for="new-comment">Add New Comment.....</label>
