Added seed data and tweaked layout

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <h2 class="mb-3">Dashboard</h2>
 <div class="container d-flex flex-column">
-    <a class="btn btn-dark bg-navy align-self-end px-4" href="/dashboard/new">+ New Post</a>
+    <a class="btn btn-dark bg-navy align-self-end px-4 mx-4" href="/dashboard/new">+ New Post</a>
     <div class="card m-3">
         <h3 class="card-header bg-dark text-light">Your Posts</h3>
         <div class="card-body">
