Added User route middleware for lowercase email and modified post view

--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -8,7 +8,7 @@
                 <label class="form-label ms-3" for="cityInput">Title</label>
             </div>
             <div class="form-floating m-3">
-                <textarea class="col-12 form-control" name="Edit Content" id="content" cols="200" rows="20" style="height: 20em;" placeholder="Title"></textarea>
+                <textarea class="col-12 form-control" name="Edit Content" id="content" cols="200" rows="20" style="height: 20em;" placeholder="Content"></textarea>
                 <label class="form-label ms-3" for="content">Content</label>
             </div>
             <footer class="text-end">
