--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,15 +1,17 @@
 <div id="post" data-id="{{post.id}}" class="w-100">
     {{#if usersPost}}
     <div class="d-flex justify-content-end">
-        <button id="edit-post" class="btn btn-dark bg-navy text-light px-4 m-2 edit">Edit Post</button>
-        <button id="save-edit" class="btn btn-dark bg-navy text-light px-4 m-2 d-none edit">Save Changes</button>
-        <button type="button" class="btn btn-danger text-light px-4 m-2" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete Post</button>
+        <button id="edit-post" class="btn btn-dark bg-navy text-light px-4 m-2 edit rounded-pill">Edit Post</button>
+        <button id="save-edit" class="btn btn-dark bg-success text-light px-4 m-2 d-none edit rounded-pill">Save Changes</button>
+        <button id="cancel-edit" class="btn btn-dark bg-navy text-light px-4 m-2 d-none edit rounded-pill">Cancel Changes</button>
+        <button type="button" class="btn btn-danger text-light px-4 m-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete Post</button>
     </div>
     {{/if}}
     <div class="container d-flex justify-content-center">
         <h2 class="mb-3 edit">{{post.title}}</h2>
+        {{!-- hidden title input field for editing --}}
         <div class="form-floating m-3 edit d-none w-75">
-            <input id="edit-title" type="text" name="Edit Title" class="form-control mb-3" value="{{post.title}}">
+            <input id="edit-title" type="text" name="Edit Title" class="form-control mb-3" value="{{post.title}}"  data-bs-trigger="manual" data-bs-placement="bottom" data-bs-title="Title cannot be blank!">
             <label class="form-label ms-3" for="cityInput">Title</label>
         </div>
     </div>
@@ -17,34 +19,38 @@
 <div class="container d-flex flex-column align-items-center">
     <div class="card m-1">
         <div class="card-body">
+            <p class="edit">{{post.content}}</p>
+            {{!-- hidden content textarea for editing --}}
             <div class="form-floating m-3 edit d-none">
-                <textarea class="col-12 form-control" name="Edit Content" id="edit-content" cols="200" rows="15" style="height: 20em;" >{{post.content}}</textarea>
+                <textarea class="col-12 form-control" name="Edit Content" id="edit-content" cols="200" rows="15" style="height: 20em;" data-bs-trigger="manual" data-bs-placement="bottom" data-bs-title="Content cannot be blank!">{{post.content}}</textarea>
                 <label class="form-label ms-3" for="content">Content</label>
             </div>
-            <p class="edit">{{post.content}}</p>
         </div>
         <footer class="card-footer d-flex justify-content-between">
             <small class="text-muted">Posted By: {{post.user.username}}</small>
             <small class="text-muted">{{format_date post.createdAt}}</small>
         </footer>
     </div>
+    {{!-- display link to login page if note logged in --}}
     {{#unless loggedIn}}
     <div class="align-self-start mx-3 my-1">
         <a href="/login">Login</a> to leave a comment
     </div>
     {{/unless}}
     <div class="col-10">
+        {{!-- show comment form if logged in --}}
         {{#if loggedIn}}
         <div class="row mb-3 flex-column flex-sm-row">
             <div class="col-10 form-floating">
-                <input type="text" name="New Comment" id="new-comment" class="form-control" placeholder="Add New Comment.....">
+                <input type="text" name="New Comment" id="new-comment" class="form-control" placeholder="Add New Comment....."  data-bs-trigger="manual" data-bs-placement="bottom" data-bs-title="Comment cannot be blank!">
                 <label class="form-label ms-3" for="new-comment">Add New Comment.....</label>
             </div>
             <div class="col-2">
-                <button id="post-comment" class="btn btn-dark bg-navy m-2 px-4">Submit</button>
+                <button id="post-comment" class="btn btn-dark bg-navy m-2 px-4 rounded-pill">Submit</button>
             </div>
         </div>
         {{/if}}
+        {{!-- if there are comments display them --}}
         {{#if comments}}
         <h4>Comments:</h4>
         {{/if}}
@@ -63,19 +69,19 @@
     <script src="/js/comment.js"></script>
 {{/if}}
 {{#if usersPost}}
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content border border-danger text-danger">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Are You Sure?</h5>
+        <h5 class="modal-title" id="deleteModalLabel">Are You Sure?</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         This action cannot be reversed.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-dark bg-navy" data-bs-dismiss="modal">Never Mind</button>
-        <button id="delete-post" type="button" class="btn btn-danger">Delete Post!</button>
+        <button type="button" class="btn btn-dark bg-navy px-4 rounded-pill" data-bs-dismiss="modal">Never Mind</button>
+        <button id="delete-post" type="button" class="btn btn-danger px-4 rounded-pill">Delete Post!</button>
       </div>
     </div>
   </div>
