--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,9 +3,9 @@
     <a class="btn btn-dark bg-navy align-self-end px-4 mx-4 rounded-pill" href="/dashboard/new">+ New Post</a>
     <div class="card m-3 border-dark">
         <h3 class="card-header bg-dark text-white">Your Posts</h3>
-        <div class="card-body">
+        <div class="card-body py-0">
             {{#each posts}}
-            <div class="card m-2 border border-dark">
+            <div class="card my-3 border border-dark">
                 <a class="card-body d-flex flex-column flex-sm-row justify-content-between align-items-start text-decoration-none" href="/post/{{id}}">
                     <div class="ms-sm-2 me-sm-auto">
                         <div class="fw-bold fs-5">{{title}}</div>
