--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,9 +3,9 @@
         <div class="card-header bg-dark text-white">
             <h2 class="text-center">Recent Posts</h2>
         </div>
-        <div class="card-body">
+        <div class="card-body py-0">
             {{#each posts}}
-            <div class="card m-2 border border-dark">
+            <div class="card my-3 border border-dark">
                 <a class="card-body d-flex flex-column flex-sm-row justify-content-between align-items-start text-decoration-none" href="/post/{{id}}">
                     <div class="ms-sm-2 me-sm-auto">
                         <div class="fw-bold fs-5">{{title}}</div>
