--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,7 @@
             </div>
             {{/each}}
             {{#unless posts}}
-            <h4 class="text-center">You have no Posts</h4>
+            <h4 class="text-center m-0 p-3">You have no Posts</h4>
             {{/unless}}
         </div>
     </div>
