Added README.md and one final tweak to styles

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,7 +2,7 @@
     {{#if usersPost}}
     <div class="d-flex justify-content-end">
         <button id="edit-post" class="btn btn-dark bg-navy text-light px-4 m-2 edit rounded-pill">Edit Post</button>
-        <button id="save-edit" class="btn btn-dark bg-success text-light px-4 m-2 d-none edit rounded-pill" data-method="PUT">Save Changes</button>
+        <button id="save-edit" class="btn btn-dark bg-green text-light px-4 m-2 d-none edit rounded-pill" data-method="PUT">Save Changes</button>
         <button id="cancel-edit" class="btn btn-dark bg-navy text-light px-4 m-2 d-none edit rounded-pill">Cancel Changes</button>
         <button type="button" class="btn btn-danger text-light px-4 m-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete Post</button>
     </div>
